added the ability to add employees, as well as an active count of them

--- a/src/components/EmployeesAddForm/EmployeesAddForm.css
+++ b/src/components/EmployeesAddForm/EmployeesAddForm.css
@@ -5,7 +5,7 @@
 .app-add-form {
     margin-top: 30px;
     padding: 25px;
-    background-color: #4a554b;
+    background-color: #333;
     border-radius: 4px;
     box-shadow: 15px 15px 30px rgba(0,0,0, .15);
     color: #fff;
