--- a/src/components/info/Info.module.scss
+++ b/src/components/info/Info.module.scss
@@ -1,6 +1,9 @@
 .info {
-  background-color: rgb(74, 85, 75);
-  padding: 50px 10px;
+  background: url('../../../src/img/bg.jpeg') no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 450px;
+  padding: 10px;
   color: #e3e3e3e3;
   font-family: Arial;
   margin: 0 auto 20px;
