--- a/src/components/filter/Filter.module.scss
+++ b/src/components/filter/Filter.module.scss
@@ -1,12 +1,11 @@
 .btnGroup {
-  background-color: rgb(74, 85, 75);
+  background-color: #333;
   padding: 10px;
   border-radius: 10px;
   margin-bottom: 30px;
-  text-align: center;
 
   button {
-    border: 1px solid #e3e3e3e3;
+    border: 1px solid #a19a9ae3;
     margin-right: 5px;
     
     &:last-child {
