--- a/src/components/search/Search.module.scss
+++ b/src/components/search/Search.module.scss
@@ -1,6 +1,6 @@
 .search {
   padding: 5px;
-  border: 10px solid rgb(74, 85, 75);
+  border: 10px solid #333;
   border-radius: 10px;
   box-shadow: 15px 15px 30px rgba (0,0,0, .15);
   color: #000;
